stylesheets/_modules.scss
/* ... */
.module-message__buttons__download--incoming {
  margin-left: 12px;
}
.module-message__buttons__download--outgoing {
  margin-right: 12px;
}

.module-message__buttons__reply {
  height: 24px;
  width: 24px;
  display: inline-block;
  cursor: pointer;

  @include light-theme {
    @include color-svg(
      '../images/icons/v2/reply-outline-24.svg',
      $color-gray-45
    );
    &:hover {
      @include color-svg(
        '../images/icons/v2/reply-outline-24.svg',
        $color-gray-90
      );
    }
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/reply-solid-24.svg', $color-gray-45);
    &:hover {
      @include color-svg(
        '../images/icons/v2/reply-solid-24.svg',
        $color-gray-02
      );
    }
  }
}

.module-message__buttons__reply--incoming {
  margin-left: 12px;
}
.module-message__buttons__reply--outgoing {
  margin-right: 12px;
}

.module-message__buttons__menu {
  height: 24px;
  width: 24px;
  display: inline-block;
  cursor: pointer;

  @include color-svg('../images/icons/v2/more-horiz-24.svg', $color-gray-45);
  @include light-theme {
    &:hover {
      @include color-svg(
        '../images/icons/v2/more-horiz-24.svg',
        $color-gray-90
      );
    }
  }
  @include dark-theme {
    &:hover {
      @include color-svg(
        '../images/icons/v2/more-horiz-24.svg',
        $color-gray-02
      );
    }
  }
}

.module-message__buttons__menu--incoming {
  margin-left: 12px;
}

.module_message__buttons__menu--outgoing {
  margin-right: 12px;
}

.module-message__error-container {
  min-width: 28px;
  position: relative;
}

.module-message__error {
  width: 20px;
  height: 20px;
  display: inline-block;
  position: absolute;
  bottom: 4px;

  @include light-theme {
    @include color-svg(
      '../images/icons/v2/error-outline-24.svg',
      $color-accent-red
    );
  }
  @include dark-theme {
    @include color-svg(
      '../images/icons/v2/error-solid-24.svg',
      $color-accent-red
    );
  }
}
.module-message__error--paused {
  @include light-theme {
    @include color-svg(
      '../images/icons/v2/error-outline-24.svg',
      $color-gray-60
    );
  }
  @include dark-theme {
    @include color-svg('../images/icons/v2/error-solid-24.svg', $color-gray-45);
  }
}

.module-message__error--outgoing {
  left: 8px;
}

.module-message__error--incoming {
  right: 8px;
}

.module-message__container-outer {
  line-height: 0;
  display: flex;
  flex-direction: column;
  width: 100%;
}
.module-message__container {
  position: relative;
  display: inline-block;
  border-radius: 16px;
  padding-right: 12px;
  padding-left: 12px;
  padding-top: 10px;
  padding-bottom: 7px;
  min-width: 0px;
  width: 100%;
  overflow: hidden;

  @include light-theme {
    border: 1px solid $color-white;
  }

  @include dark-theme {
    border: 1px solid $color-gray-95;
  }
}

// This is the component we put the outline around when the whole message is selected
.module-message--selected .module-message__container {
  @include mouse-mode {
    animation: message--mouse-selected 1s $ease-out-expo;
  }
}
.module-message:focus .module-message__container {
  @include keyboard-mode {
    box-shadow: 0 0 0 3px $color-ultramarine;
  }
}

@keyframes message--mouse-selected {
  0% {
    box-shadow: 0 0 0 5px transparent;
  }
  10% {
    box-shadow: 0 0 0 5px $color-ultramarine;
  }
  70% {
    box-shadow: 0 0 0 5px $color-ultramarine;
  }
  100% {
    box-shadow: 0 0 0 5px transparent;
  }
}

// We disable this highlight for messages with stickers, instead highlighting the sticker
.module-message--selected .module-message__container--with-sticker {
  @include mouse-mode {
    animation: none;
  }
}
.module-message:focus .module-message__container--with-sticker {
  @include keyboard-mode {
    box-shadow: none;
  }
}

.module-message__container--with-sticker {
  @include light-theme {
    border: none;
  }

  @include dark-theme {
    border: none;
  }

  /* Leave some padding to eat the negative margin-bottom from
   * .module-message__metadata
   */
  padding-bottom: 3px;
}

.module-message__container--outgoing {
  @include light-theme {
    background-color: $color-ultramarine;
    color: $color-white;
  }
  @include dark-theme {
    background-color: $color-ultramarine;
    color: $color-gray-05;
  }
}

// In case the color gets messed up
.module-message__container--incoming {
  background-color: $color-gray-05;
  color: $color-gray-90;

  @include dark-theme {
    background-color: $color-gray-75;
    color: $color-gray-05;
  }
}

@each $color, $value in $conversation-colors {
  .module-message__container--outgoing-#{$color} {
    background-color: $value;

    @include dark-theme {
      background-color: $value;
    }
  }
}

.module-message__container--outgoing-custom {
  background-attachment: fixed;
}

@each $color, $value in $conversation-colors-gradient {
  .module-message__container--outgoing-#{$color} {
    background-attachment: fixed;
    background-image: linear-gradient(
      map-get($value, 'deg'),
      map-get($value, 'start'),
      map-get($value, 'end')
    );
  }
}

.module-message__container--with-tap-to-view {
  min-width: 148px;
  cursor: pointer;
  user-select: none;
}

.module-message__container--with-tap-to-view-pending {
  background-color: $color-gray-15;
}

.module-message__container--with-tap-to-view-pending {
  cursor: default;
}

.module-message__container--with-tap-to-view-expired {
  @include light-theme {
    border: 1px solid $color-gray-15;
    background-color: $color-white;
  }
  @include dark-theme {
    border: 1px solid $color-gray-60;
    background-color: $color-gray-95;
  }
}

.module-message__container--with-tap-to-view-error {
  width: auto;
  cursor: default;

  @include light-theme {
    background-color: $color-white;
    border: 1px solid $color-deep-red;
  }
  @include dark-theme {
    background-color: $color-black;
    border: 1px solid $color-deep-red;
  }
}
/* ... */

